# jemima

./: .gitignore  hie.yaml  jemima.cabal
rsc/: README.md
src/client/: Client.hs
src/lib/: Poker.hs
src/server/: Server.hs
